--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Flappy Bird</title>
-    <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/flappy.css">
 </head>
 
 <body class="conteudo">
     <h1>Flappy Bird</h1>
     <div wm-flappy></div> 
+    <div class="botao"><button id="btn">PULAR</button></div>
     <script src="js/flappy.js"></script>
 </body>
 
